--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -39,6 +39,15 @@
             <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
         </li>
+
+      <% if current_user %>
+        <li class="current-user">Welcome, <%= current_user.first_name %></li>
+        <li class="logout"><%= link_to 'Logout', '/logout' %></li>
+      <% else %>
+        <li class="login"><%= link_to 'Login', '/login' %></li>
+        <li class="signup"><%= link_to 'Sign Up', '/signup' %></li>
+      <% end %>
+
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
