--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,6 +4,37 @@
     <h1>Order #<%= @order.id %></h1>
   </header>
 
+<div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Unit Price</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @order_total = 0 %>
+        <% @order.line_items.each do |line_item| %>
+        <% # For each line_item in @order render _item.html.erb %>
+          <% @order_total += line_item.total_price %>
+          <%= render 'item', line_item: line_item %>
+        <% end %>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="4">
+            TOTAL:
+          </th>
+          <th>
+            <%= @order_total %>
+          </th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
   </div>
