Render User Reviews on Product Page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,6 +26,22 @@
       </div>
     </div>
 
+
+    <div class="row">
+        <dl class="dl-horizontal">
+          <% @reviews.each do |review| %>
+          <dt>User</dt>
+          <dd><%= review.user.first_name %> <%= review.user.last_name %></dd>
+          <dt>Rating</dt>
+          <dd><%= review.rating %></dd>
+          <dt>Description</dt>
+          <dd><%= review.description %></dd>
+          <% end %>
+        </dl>
+
+      </div>
+    </div>
+
   </article>
 
 </section>
