Clean slate pre tests

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -42,15 +42,12 @@
       </div>
 
       <%= form_for @review, url: product_reviews_path(@product) do |f| %>
-
         <%= f.text_area :description %>
-
         <%= f.select (:rating) do %>
-          <% [["Excellent - 5", 5], ["4", 4], ["3", 3], ["2", 2], ["1", 1]].each do |c| %>
+          <% [["5 - Excellent", 5], ["4 - Great", 4], ["3 - Good", 3], ["2 - Fair", 2], ["1 - Poor", 1]].each do |c| %>
           <%= content_tag(:option, c.first, value: c.last) %>
             <% end %>
           <% end %>
-
         <%= f.submit "Post Review" %>
 
        <% end %>
